NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_airport__c/NV_obj_airport__c.object-meta.xml
<CustomObject>
    <description>Object which stores airport related data.</description>
    <label>Airport</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>