NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_airport__c/fields/NV_fld_airportIATA__c.field-meta.xml
<CustomField>
    <fullName>NV_fld_airportIATA__c</fullName>
    <label>Airport IATA</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>