NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_airport__c/fields/NV_fld_airportLatitude__c.field-meta.xml
<CustomField>
    <fullName>NV_fld_airportLatitude__c</fullName>
    <label>Aiport Latitude</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>