NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_airport__c/fields/NV_fld_airportLongitude__c.field-meta.xml
<CustomField>
    <fullName>NV_fld_airportLongitude__c</fullName>
    <label>Airport Longitude</label>
    <precision>10</precision>
    <required>true</required>
    <scale>7</scale>
    <type>Number</type>
</CustomField>